<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.userUpload.dataByUser"
    android:scrollbars="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <androidx.cardview.widget.CardView
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            app:cardBackgroundColor="@color/card_background"
            >

            <LinearLayout
                android:id="@+id/large_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="Donation shows kindness"
                    android:textColor="@color/text_color"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="40dp"
                    android:gravity="center"
                    android:text="Feel happy to make happy others"
                    android:textColor="@color/text_color"
                    android:textSize="15sp"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/user_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:elevation="20dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/search"
                    android:drawablePadding="8dp"
                    android:inputType="textCapSentences"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:hint="@string/edittext1_hint"
                    android:padding="10dp" />


                <EditText
                    android:id="@+id/user_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/search"
                    android:elevation="20dp"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:drawablePadding="8dp"
                    android:inputType="textCapSentences"
                    android:hint="@string/edittext2_hint"
                    android:padding="10dp" />

                <TextView
                    android:id="@+id/share_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="I want to share information about "
                    android:textColor="@color/text_color"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp">

                    <Spinner
                        android:id="@+id/dropdown_custom_icon_menu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:backgroundTint="@color/black"
                        android:text="Medicines and Injections"
                        android:textColor="@color/text_color" />

                </LinearLayout>


                <TextView
                    android:id="@+id/spiner_text_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="I got the information from  "
                    android:textColor="@color/text_color"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/spinner_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/search"
                    android:elevation="20dp"
                    android:drawableStart="@drawable/ic_baseline_info_24"
                    android:drawablePadding="8dp"
                    android:inputType="textCapSentences"
                    android:hint="@string/edittext3_hint"
                    android:padding="10dp" />

                <TextView
                    android:id="@+id/spiner_address_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="Address for accessing above facility is"
                    android:textColor="@color/text_color"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/locality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:elevation="20dp"
                    android:background="@drawable/search"
                    android:inputType="textCapSentences"
                    android:hint="@string/edittext4_hint"
                    android:drawableStart="@drawable/ic_baseline_location_city_24"
                    android:drawablePadding="8dp"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/Landmark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/search"
                    android:drawablePadding="8dp"
                    android:inputType="textCapSentences"
                    android:elevation="20dp"
                    android:drawableStart="@drawable/ic_baseline_location_city_24"
                    android:hint="@string/edittext5_hint"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/city_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/search"
                    android:elevation="20dp"
                    android:inputType="textCapSentences"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_baseline_location_city_24"
                    android:hint="@string/edittext6_hint"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/State"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/search"
                    android:inputType="textCapSentences"
                    android:drawablePadding="8dp"
                    android:elevation="20dp"
                    android:hint="@string/edittext7_hint"
                    android:drawableStart="@drawable/ic_baseline_location_city_24"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/Pincode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/search"
                    android:drawablePadding="8dp"
                    android:elevation="20dp"
                    android:hint="@string/Pincode"
                    android:drawableStart="@drawable/ic_baseline_person_pin_circle_24"
                    android:inputType="number"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/Phone1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                   android:layout_margin="10dp"
                    android:background="@drawable/search"
                    android:elevation="20dp"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_baseline_contact_phone_24"
                    android:hint="@string/edittext8_hint"
                    android:inputType="number"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/Phone2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/search"
                    android:elevation="20dp"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_baseline_contact_phone_24"
                    android:hint="@string/edittext9_hint"
                    android:inputType="number"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/Info_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/search"
                    android:elevation="20dp"
                    android:drawablePadding="8dp"
                    android:hint="@string/edittext10_hint"
                    android:inputType="text"
                    android:drawableStart="@drawable/ic_baseline_info_24"
                    android:padding="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <Button
                        android:id="@+id/Upload_foto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:padding="10dp"
                        android:text="upload photo" />

                    <ImageView
                        android:id="@+id/upload_image"
                        android:layout_width="60dp"
                        android:scaleType="fitXY"
                        android:layout_height="60dp"
                        android:layout_gravity="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@+id/large_linear">

                    <Button
                        android:id="@+id/submit_user_form"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="30dp"
                        android:backgroundTint="@color/black"
                        android:text="Submit information" />
                </LinearLayout>



            </LinearLayout>


        </androidx.cardview.widget.CardView>




    </RelativeLayout>

</ScrollView>