<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.precaution.precautionFragment"
    android:background="@color/card_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="#E3FAE3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/baloo_bhai"
                android:text="Some Precautions To Be Safe"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:gravity="center">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/firstimage"/>

<!--            <com.smarteist.autoimageslider.SliderView-->
<!--                android:id="@+id/imageSlid"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="200dp"-->
<!--                app:sliderAnimationDuration="600"-->
<!--                app:sliderAutoCycleDirection="back_and_forth"-->
<!--                app:sliderAutoCycleEnabled="true"-->
<!--                app:sliderIndicatorAnimationDuration="600"-->
<!--                app:sliderIndicatorGravity="center_horizontal|bottom"-->
<!--                app:sliderIndicatorMargin="15dp"-->
<!--                app:sliderIndicatorOrientation="horizontal"-->
<!--                app:sliderIndicatorPadding="3dp"-->
<!--                app:sliderIndicatorRadius="2dp"-->
<!--                app:sliderIndicatorSelectedColor="#5A5A5A"-->
<!--                app:sliderIndicatorUnselectedColor="#FFF"-->
<!--                app:sliderScrollTimeInSec="2"-->
<!--                app:sliderStartAutoCycle="true" />-->

        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            app:cardCornerRadius="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:src="@drawable/home"
                        android:layout_gravity="center"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/russo_one"
                        android:text="@string/stay_home"
                        android:textAlignment="center"
                        android:textColor="#777"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>



        </androidx.cardview.widget.CardView>

        //2nd card

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            app:cardCornerRadius="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginBottom="10dp"
                        android:src="@drawable/sneez"
                        android:layout_gravity="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    >
                    <TextView
                        android:textColor="#777"
                        android:fontFamily="@font/russo_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:textSize="18sp"
                        android:textAlignment="center"
                        android:text="@string/Symptoms"/>
                </LinearLayout>

            </LinearLayout>



        </androidx.cardview.widget.CardView>

        //3rd card

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            app:cardCornerRadius="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:src="@drawable/mask"
                        android:layout_gravity="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    >
                    <TextView
                        android:textColor="#777"
                        android:fontFamily="@font/russo_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textAlignment="center"
                        android:text="@string/mask"/>
                </LinearLayout>

            </LinearLayout>



        </androidx.cardview.widget.CardView>

        //4th card

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            app:cardCornerRadius="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:src="@drawable/senit"
                        android:layout_gravity="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    >
                    <TextView
                        android:textColor="#777"
                        android:fontFamily="@font/russo_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textAlignment="center"
                        android:text="@string/senit"/>
                </LinearLayout>

            </LinearLayout>



        </androidx.cardview.widget.CardView>

        //5th card

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            app:cardCornerRadius="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:src="@drawable/distance"
                        android:layout_gravity="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    >

                    <TextView
                        android:textColor="#777"
                        android:fontFamily="@font/russo_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textAlignment="center"
                        android:text="@string/hug"/>
                </LinearLayout>

            </LinearLayout>



        </androidx.cardview.widget.CardView>

        //5th card

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            app:cardCornerRadius="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:src="@drawable/honey"
                        android:layout_gravity="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    >
                    <TextView
                        android:textColor="#777"
                        android:fontFamily="@font/russo_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textAlignment="center"
                        android:text="@string/drink"/>
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>


</ScrollView>